--- a/CodingOnCountry/CodingOnCountry.csproj
+++ b/CodingOnCountry/CodingOnCountry.csproj
@@ -7,9 +7,16 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Http.Extensions" Version="1.0.0-rc1-final" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
