--- a/CodingOnCountry/CodingOnCountry.csproj
+++ b/CodingOnCountry/CodingOnCountry.csproj
@@ -16,7 +16,7 @@
 
 
   <ItemGroup>
-    <Folder Include="wwwroot\uploads\" />
+    <Folder Include="wwwroot\uploads\camps\" />
   </ItemGroup>
 
 </Project>
